USD: 2 minor memory leaks in the import workflow #100016

Closed
opened 2022-07-27 07:22:07 +02:00 by Jesse Yurkovich · 6 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.09

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-07-25 22:17, hash: 4cf6524731
Worked: (newest version of Blender that worked as expected)

Short description of error
There's 2 minor memory leaks during USD import.

Exact steps for others to reproduce the error
- [x] Small 4 byte leak(s)
The allocation inside wm_usd_import_invoke will leak if the user Cancels the dialog (this also occurs for wm_usd_export_invoke as well)

  • Run blender with --debug --debug-memory
  • File->Import->USD
  • Cancel the dialog

Example when doing the above twice:

Error: Not freed memory blocks: 2, total unfreed memory 0.000008 MB
eUSDOperatorOptions len: 4 0000016E5F89F868
eUSDOperatorOptions len: 4 0000016E5F89CC58

- [x] A 1024 byte leak during each Import
The prim_path_mask variable is allocated inside wm_usd_import_exec but never free'd

This was found from inspection and, because it uses malloc directly, is not part of blender's memory tracking for display like the above.

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.09 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-07-25 22:17, hash: `4cf6524731` Worked: (newest version of Blender that worked as expected) **Short description of error** There's 2 minor memory leaks during USD import. **Exact steps for others to reproduce the error** **- [x]** Small 4 byte leak(s) The allocation inside `wm_usd_import_invoke` will leak if the user Cancels the dialog (this also occurs for `wm_usd_export_invoke` as well) - Run blender with `--debug --debug-memory` - File->Import->USD - Cancel the dialog Example when doing the above twice: ``` Error: Not freed memory blocks: 2, total unfreed memory 0.000008 MB eUSDOperatorOptions len: 4 0000016E5F89F868 eUSDOperatorOptions len: 4 0000016E5F89CC58 ``` **- [x]** A 1024 byte leak during each Import The `prim_path_mask` variable is allocated inside `wm_usd_import_exec` but never free'd This was found from inspection and, because it uses `malloc` directly, is not part of blender's memory tracking for display like the above.
Author
Member

Added subscriber: @deadpin

Added subscriber: @deadpin
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Added subscriber: @aras_p

Added subscriber: @aras_p
Sonny Campbell self-assigned this 2022-08-25 12:36:50 +02:00

This issue was referenced by 54571003dc

This issue was referenced by 54571003dc115233896df97c8d80a03f00fd8c14

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne added this to the Pipeline, Assets & IO project 2023-02-09 15:40:02 +01:00
Bastien Montagne removed this from the Pipeline, Assets & IO project 2023-02-10 12:49:18 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100016
No description provided.